# WizCare

./: .gitignore  AGENTS.md  Deimos.py  Deimos.spec  README.md  _pyi_rthook_wizsprinter.py  deimos_chat_transcript_export.txt  pyproject.toml
.codex/: commands.md
.codex/references/: phase32-local-build-smoke-readiness.md  phase35-release-upload-safety.md  phase36-update-system-scaffold.md  phase37-update-check-gui-integration.md  phase38-staged-download-review-flow.md  phase39-staged-manifest-review-ui.md  phase40-updater-install-design-review.md  phase41-updater-helper-specification.md  phase42-updater-helper-implementation-scaffold.md  phase43-updater-helper-build-packaging.md  phase44-updater-helper-artifact-validation.md  phase45-helper-release-manifest-integration.md  (+23 more)
.github/workflows/: build.yml  (+3 more)
docs/: binary-assets.md  wizard101-knowledge-roadmap.md
libs/wizlaunch/: Cargo.toml  README.md  pyproject.toml  wizlaunch.pyi
libs/wizlaunch/src/: credential_store.rs  credui.rs  errors.rs  launcher.rs  lib.rs  login.rs  main.rs  metadata.rs  python.rs
locale/: en.lang  zh.lang
scripts/: wizard101_ingest_mediawiki.py  wizard101_knowledge_report.py  wizard101_schema_report.py  wizard101_source_inventory.py
src/: combat_knowledge.py  command_parser.py  config_combat.py  drop_logger.py  lang.py  settings_manager.py  stat_viewer.py  update_install_plan.py  update_system.py  utils.py  wizard101_knowledge.py  world_to_screen.py
tests/: test_combat_knowledge.py  test_knowledge_safe_combat_config.py  test_wizard101_ingest_mediawiki.py  test_wizard101_knowledge.py
(+266 files in other folders)
