[package]
name = "wizlaunch"
version = "0.1.0"
edition = "2021"

[lib]
name = "wizlaunch"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "wizlaunch-cli"
path = "src/main.rs"

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["pyo3"]
python = ["pyo3"]

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Security_Credentials",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
]
